--- a/films/app/assets/stylesheets/films.scss
+++ b/films/app/assets/stylesheets/films.scss
@@ -2,123 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-$backup_font_family: Helvetica, Arial, sans-serif;
-$my_font_family_1: 'Source Sans Pro', $backup_font_family;
-
-$my_font_family_2: 'Oswald', $backup_font_family;
-
-$title_color : #990000;
-$subtitle_color: #999;
 
 // This mixin provides a fancier clearfix than using the overflow property!
-@mixin clearfix {
-  &::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-html {
-  box-sizing: inherit;
-  font-family: $my_font_family_1;
-  font-size: 20px;
-  line-height: 1.35;
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  height: 100%;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: $my_font_family_2;
-  // font-weight: 700;
-  line-height: 1.1;
-}
-
-img {
-  max-width: 100%;
-}
-
-figure {
-  margin: 0;
-}
-
-article {
-  width: 75%;
-  margin: 1rem auto 3rem;
-  > header {
-    @include clearfix;
-  // overflow: auto;
-  }
-}
-
-.home {
-  height: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.hero-block {
-  position: relative;
-  @include clearfix;
-  // overflow: hidden;
-}
-.hero-logo-container {
-  float: left;
-  width: 25%;
-  padding: 1rem;
-
-  > .hero-logo {
-    display: block;
-    width: 150px;
-    margin: auto;
-  }
-}
-
-.hero-title-container {
-  float: left;
-  width: 75%;
-
-  > .hero-title {
-    font-size: 3rem;
-    margin: 2rem 0 0;
-    color: $title_color;
-  }
-
-  .hero-tagline {
-    color: $subtitle_color;
-    margin: 0.25rem 0;
-  }
-}
-
-.article-poster {
-    float: left;
-    width: 25%;
-    margin-right: 1.5rem;
-}
-
-.article-title {
-  h1 {
-    font-size: 2rem;
-    margin-bottom: 0;
-    color: $title_color;
-  }
-  h2 {
-    font-size: 1.2em;
-    color: $subtitle_color;
-  }
-}
+@import "variables";
+@import "mixins";
+@import "base";
+@import "article";
+@import "hero";
